<resources>
    <string name="app_name">悦享生活</string>
    <string name="tab_news">资讯</string>
    <string name="tab_girl">妹子</string>
    <string name="tab_video">视频</string>
    <string name="tab_assistant">助手</string>
    <string name="top_title">标题</string>
    <string name="news_title">新闻频道</string>
    <string name="video_from">内涵段子</string>
    <string name="happy_time">内涵的不只是段子哦</string>
    <string name="video_play_times">%1$s次播放</string>
    <string name="user_desc">还是很美的</string>
    <string name="saoyisao">扫一扫</string>
    <string name="chat">聊一聊</string>
    <string name="my_location">我的位置</string>
    <string name="my_guishudi">归属地查询</string>
    <string name="my_wuliu">快递查询</string>
    <string name="my_about">关于软件</string>
    <string name="phonenum">请输入您的手机号码</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="numdel">DEL</string>
    <string name="numselect">查询</string>
    <string name="com_select">请选择快递公司</string>
    <string name="hint_kuaidi">请输入快递单号</string>
    <string name="query">查询</string>
    <string name="logistics">物流查询</string>
    <string name="about_soft">悦享生活  V1.0.0</string>
    <string name="blog">个人博客：http://blog.csdn.net/jarchie520</string>
    <string name="github">个人GitHub：https://github.com/JArchie</string>
</resources>
