<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_bg"
    android:orientation="vertical">

    <com.jarchie.yue.ui.widget.CustomToolBar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_main"
        android:minHeight="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/mSpinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mSpinnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/layout_bg"
            android:padding="10dp"
            android:text="@string/com_select" />

        <EditText
            android:id="@+id/mEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_bg"
            android:hint="@string/hint_kuaidi"
            android:inputType="number"
            android:padding="5dp" />

        <TextView
            android:id="@+id/mBtnQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_bg"
            android:padding="10dp"
            android:text="@string/query"
            android:textColor="@color/color_fff"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_999" />

    <com.jarchie.common.widget.LoadingTip
        android:id="@+id/loadedTip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/kuaidi_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:scrollbars="none" />

</LinearLayout>
